問題５までとりあえず解いた

--- a/kadai2/Python演習1.ipynb
+++ b/kadai2/Python演習1.ipynb
@@ -35,8 +35,20 @@
       "metadata": {
         "id": "b34Yn70dal4y"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "ecneicsatad\n"
+          ]
+        }
+      ],
+      "source": [
+        "X = \"datascience\"\n",
+        "sakasa = X[::-1] # 文字列を逆順にスライス\n",
+        "print(sakasa)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -55,8 +67,20 @@
       "metadata": {
         "id": "vMZAn2xLa-DI"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "エストニア\n"
+          ]
+        }
+      ],
+      "source": [
+        "X = \"ヘエルスシトンニキア\"\n",
+        "extraction = X[1::2] # インデックス1から2つおきに文字を抽出\n",
+        "print(extraction)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -75,8 +99,26 @@
       "metadata": {
         "id": "96eYhROCbA20"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "ヘエルスシトンニキア\n"
+          ]
+        }
+      ],
+      "source": [
+        "X = \"ヘルシンキ\"\n",
+        "Y = \"エストニア\"\n",
+        "\n",
+        "Z = \"\"\n",
+        "max_len = max(len(X), len(Y)) #最大の長さを取得\n",
+        "for i in range(max_len): #長い方の長さまでループ\n",
+        "    Z += X[i] + Y[i] #インデックスiの文字を交互に追加\n",
+        "\n",
+        "print(Z)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -95,8 +137,20 @@
       "metadata": {
         "id": "oUTnc-HwbEqP"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Character', 'education', 'based', 'on', 'the', 'fundamental', 'spirit', 'of', 'Buddhism', 'and', 'the', 'Shiguzeigan']\n"
+          ]
+        }
+      ],
+      "source": [
+        "X = \"Character education based on the fundamental spirit of Buddhism and the Shiguzeigan\"\n",
+        "words = X.split() # split()メソッドで単語に分割\n",
+        "print((words))"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -115,8 +169,30 @@
       "metadata": {
         "id": "yRinYBhWbWah"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1: 'It', 2: 'is', 5: 'st', 6: 'of', 8: 'sp', 9: 'th', 16: 'su'}\n"
+          ]
+        }
+      ],
+      "source": [
+        "X = \"It is not the strongest of the species that survives, nor the most intelligent that survives. It is the one that is most adaptable to change.\"\n",
+        "words = X.split()\n",
+        "\n",
+        "Y = [1, 2, 5, 6, 8, 9, 16] #取り出す単語の番号\n",
+        "\n",
+        "result = {}\n",
+        "for i in Y:\n",
+        "    word = words[i - 1] #0番目から始まるから-1\n",
+        "\n",
+        "    z = word[:2] #最初の2文字\n",
+        "    result[i] = z #辞書に追加\n",
+        "\n",
+        "print(result)"
+      ]
     }
   ],
   "metadata": {
@@ -124,11 +200,21 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv (3.12.12)",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.12"
     }
   },
   "nbformat": 4,
